# PersonalTrading

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  COMPOSABLE_STRATEGIES.md  DASHBOARD.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  search_contract.py  test_3hcl.py  test_3hcl_ln.py  test_3hcl_simple.py  test_contract_search.py  test_example_symbol.py  test_positions.py
.claude/: settings.json  settings.local.json
ai_iterations/: 2026-03-12_original_plan.md  2026-03-13_completion_summary.md  2026-03-13_strategy_architecture_refactor.md
analytics/: __init__.py  metrics.py  overfitting.py  stress_testing.py  visualizations.py
backtesting/: __init__.py  engine.py  portfolio_state.py  transaction.py
config/: default_config.yaml
data/: __init__.py  cache.py  market_data_service.py  preprocessing.py
decisions/: strategy_architecture_2026-03-13.md
docs/: build-strategies-pipeline.md  cli.md  dashboard.md  gsd-planning.md  mcp-tools.md  overfitting.md  project-structure.md  project.md  session_log.md  strategies.md
examples/: basic_connection.py  composable_strategies_demo.py  fetch_historical_data.py  monitor_positions.py  portfolio_realtime.py
ib_wrapper/: __init__.py  client.py  config.py  connection.py  exceptions.py  market_data.py  models.py  portfolio.py  utils.py
mcp_server/: __init__.py  server.py
optimization/: __init__.py  param_sweep.py  walk_forward.py
plan/: index.md  phase-01-fix-backtest-bugs.md  phase-01-split-server.md  phase-01-stress-testing.md  phase-02-overview-page.md  phase-02-scenario-removal.md  phase-02-strategy-loader-json.md  phase-03-cpcv.md  phase-03-json-definitions-and-cleanup.md  phase-03-project-structure-doc.md  phase-04-block-bootstrap.md  phase-04-e2e-tests.md  phase-05-docs.md  phase-05-live-risk-dashboard.md  state.md
scripts/: add_strategy_tags.py  run_all_overfitting.py  run_backtest.py  run_hrp_backtest.py  (+6 more)
(+262 files in other folders)
